--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,12 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".menu">
 
+
     <Button
         android:id="@+id/lvl1"
         android:layout_width="48dp"
         android:layout_height="60dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="72dp"
+        android:layout_marginEnd="327dp"
+        android:layout_marginBottom="599dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="1"
@@ -21,6 +24,8 @@
         android:textColorHint="#FF0000"
         android:textColorLink="#FF0000"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,6 +35,8 @@
         android:layout_height="60dp"
         android:layout_marginStart="128dp"
         android:layout_marginTop="72dp"
+        android:layout_marginEnd="235dp"
+        android:layout_marginBottom="599dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="2"
@@ -40,6 +47,8 @@
         android:textColorLink="#FF0000"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,8 +56,10 @@
         android:id="@+id/lvl3"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="220dp"
+        android:layout_marginStart="221dp"
         android:layout_marginTop="72dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginBottom="599dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="3"
@@ -59,6 +70,8 @@
         android:textColorLink="#FF0000"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,8 +79,10 @@
         android:id="@+id/lvl4"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="316dp"
+        android:layout_marginStart="317dp"
         android:layout_marginTop="72dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="599dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="4"
@@ -78,6 +93,8 @@
         android:textColorLink="#FF0000"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -85,8 +102,10 @@
         android:id="@+id/lvl5"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="37dp"
         android:layout_marginTop="168dp"
+        android:layout_marginEnd="326dp"
+        android:layout_marginBottom="503dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="5"
@@ -97,6 +116,8 @@
         android:textColorLink="#FF0000"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -106,16 +127,20 @@
         android:layout_height="60dp"
         android:layout_marginStart="128dp"
         android:layout_marginTop="168dp"
+        android:layout_marginEnd="235dp"
+        android:layout_marginBottom="503dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
-        android:visibility="invisible"
         android:text="6"
         android:textAlignment="center"
         android:textColor="#070707"
         android:textColorHighlight="#F60000"
         android:textColorHint="#FF0000"
         android:textColorLink="#FF0000"
+        android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -123,18 +148,22 @@
         android:id="@+id/lvl7"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="220dp"
+        android:layout_marginStart="221dp"
         android:layout_marginTop="168dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginBottom="503dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
-        android:visibility="invisible"
         android:text="7"
         android:textAlignment="center"
         android:textColor="#070707"
         android:textColorHighlight="#F60000"
         android:textColorHint="#FF0000"
         android:textColorLink="#FF0000"
+        android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -142,27 +171,35 @@
         android:id="@+id/lvl8"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="316dp"
+        android:layout_marginStart="317dp"
         android:layout_marginTop="168dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="503dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
-        android:visibility="invisible"
         android:text="8"
         android:textAlignment="center"
         android:textColor="#070707"
         android:textColorHighlight="#F60000"
         android:textColorHint="#FF0000"
         android:textColorLink="#FF0000"
+        android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/lvl9"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="327dp"
+        android:layout_marginBottom="407dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="9"
@@ -173,15 +210,19 @@
         android:textColorLink="#FF0000"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lvl5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/lvl10"
         android:layout_width="48dp"
         android:layout_height="60dp"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="265dp"
+        android:layout_marginEnd="235dp"
+        android:layout_marginBottom="406dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="10"
@@ -193,15 +234,19 @@
         android:textColorLink="#FF0000"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lvl6" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/lvl11"
         android:layout_width="48dp"
         android:layout_height="60dp"
         android:layout_marginStart="220dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginBottom="407dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="11"
@@ -213,8 +258,12 @@
         android:textColorLink="#FF0000"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lvl7" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/lvl12"
@@ -222,6 +271,8 @@
         android:layout_height="60dp"
         android:layout_marginStart="316dp"
         android:layout_marginTop="264dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="407dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="12"
@@ -233,72 +284,81 @@
         android:textColorLink="#FF0000"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/block9"
         android:layout_width="48dp"
         android:layout_height="60dp"
         android:layout_marginStart="36dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="327dp"
+        android:layout_marginBottom="407dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/lvl10"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.393"
         app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block10"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="235dp"
+        android:layout_marginBottom="407dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/lvl11"
-        app:layout_constraintStart_toEndOf="@+id/lvl9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.393"
         app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block11"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginStart="221dp"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginBottom="407dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/lvl12"
-        app:layout_constraintStart_toEndOf="@+id/lvl10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.393"
         app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block12"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginEnd="47dp"
+        android:layout_marginStart="317dp"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="407dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lvl11"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.393"
         app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block2"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="128dp"
         android:layout_marginTop="72dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/lvl6"
-        app:layout_constraintEnd_toStartOf="@+id/lvl3"
+        android:layout_marginEnd="235dp"
+        android:layout_marginBottom="599dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lvl1"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zamok" />
 
@@ -306,13 +366,13 @@
         android:id="@+id/block3"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="221dp"
         android:layout_marginTop="72dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/lvl7"
-        app:layout_constraintEnd_toStartOf="@+id/lvl4"
-        app:layout_constraintStart_toEndOf="@+id/lvl2"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="599dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zamok" />
 
@@ -321,64 +381,69 @@
         android:layout_width="48dp"
         android:layout_height="60dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginEnd="327dp"
         android:layout_marginBottom="503dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/lvl6"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lvl1"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block6"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginEnd="235dp"
         android:layout_marginBottom="503dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/lvl7"
-        app:layout_constraintStart_toEndOf="@+id/lvl5"
-        app:layout_constraintTop_toBottomOf="@+id/lvl2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block8"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="317dp"
+        android:layout_marginTop="168dp"
         android:layout_marginEnd="47dp"
         android:layout_marginBottom="503dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lvl7"
-        app:layout_constraintTop_toBottomOf="@+id/lvl4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block7"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginEnd="143dp"
         android:layout_marginBottom="503dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/lvl8"
-        app:layout_constraintStart_toEndOf="@+id/lvl6"
-        app:layout_constraintTop_toBottomOf="@+id/lvl3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zamok" />
 
     <ImageView
         android:id="@+id/block4"
         android:layout_width="48dp"
         android:layout_height="60dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="314dp"
         android:layout_marginTop="72dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="599dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/block3"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/zamok" />
 
