--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -32,8 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/photo5260363687036826006"
-        tools:srcCompat="@drawable/photo5260363687036826006"
-        tools:visibility="visible" />
+        tools:srcCompat="@drawable/photo5260363687036826006" />
 
     <TextView
         android:id="@+id/textView"
@@ -55,14 +54,16 @@
         android:id="@+id/textView4"
         android:layout_width="105dp"
         android:layout_height="37dp"
-        android:textSize="30sp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="230dp"
+        android:layout_marginEnd="234dp"
+        android:layout_marginBottom="353dp"
+        android:textSize="32sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.398" />
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num1"
@@ -213,18 +214,6 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/lvl_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="42dp"
-        android:text="1.Пока все просто"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <TextView
         android:id="@+id/error"
         android:layout_width="107dp"
         android:layout_height="45dp"
@@ -251,7 +240,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/stol_"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/lvl_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="44dp"
+        android:text="1.Пока все просто"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/mainbutton"
@@ -270,8 +271,8 @@
 
     <ImageView
         android:id="@+id/menubutton"
-        android:layout_width="95dp"
-        android:layout_height="88dp"
+        android:layout_width="89dp"
+        android:layout_height="78dp"
         android:layout_marginStart="342dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
