--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -32,7 +32,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/photo5260363687036826006"
-        tools:srcCompat="@drawable/photo5260363687036826006" />
+        tools:srcCompat="@drawable/photo5260363687036826006"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView"
@@ -240,7 +241,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/stol_"
-        tools:visibility="visible" />
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/lvl_name"
@@ -248,7 +249,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="44dp"
+        android:fontFamily="@font/albionic"
         android:text="1.Пока все просто"
+        android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
