--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -334,4 +334,17 @@
         app:srcCompat="@drawable/soundpin"
         tools:visibility="visible" />
 
+    <ImageView
+        android:id="@+id/soundoffbutton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginBottom="577dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/soundoffpin" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
