--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -61,6 +61,7 @@
         android:layout_marginStart="128dp"
         android:layout_marginTop="360dp"
         android:layout_marginEnd="235dp"
+        android:layout_marginBottom="311dp"
         android:background="#FF0000"
         android:backgroundTint="#AFACAC"
         android:text="14"
@@ -73,9 +74,11 @@
         android:textSize="14sp"
         android:visibility="invisible"
         app:iconTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible" />
 
     <Button
         android:id="@+id/lvl15"
@@ -100,7 +103,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/lvl16"
@@ -465,7 +469,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/zamok" />
+        app:srcCompat="@drawable/zamok"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/block15"
@@ -479,7 +484,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/zamok" />
+        app:srcCompat="@drawable/zamok"
+        tools:visibility="invisible" />
 
     <ImageView
         android:id="@+id/block16"
@@ -488,6 +494,8 @@
         android:layout_marginStart="314dp"
         android:layout_marginTop="360dp"
         android:layout_marginEnd="49dp"
+        android:layout_marginBottom="311dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
